# importdoc

./: .autoheader_cache  README.md  pyproject.toml
.github/workflows/: publish.yml
src/importdoc/: banner.py  cli.py
src/importdoc/modules/: cache.py  diagnostics.py  utils.py
tests/: test_cli.py
tests/modules/: test_autofix.py  test_cache.py  test_confidence.py  test_diagnostics.py  test_diagnostics_extended.py  test_schemas.py  test_telemetry.py  test_utils.py  test_utils_extended.py  test_worker.py
