[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "importdoc"
version = "0.0.1"
description = "Advanced Python import diagnostic tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["jsonschema", "tqdm"]  # Optional extras

[project.scripts]
importdoc = "importdoc.cli:main"